--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = hello_nbdev
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+user = albertopiva
+description = tutorial on nbdev
+keywords = nbdev
+author = Alberto Piva
+author_email = a93.piva@gmail.com
+copyright = Alberto Piva
 branch = master
 version = 0.0.1
 min_python = 3.6
